Fix regression table overflow

--- a/src/css/flexbox.sass
+++ b/src/css/flexbox.sass
@@ -5,6 +5,7 @@
   +flexbox
   flex-direction: column
   flex-grow: 1
+  min-width: 0
 
 .flexbox
   +flexbox
