--- a/src/css/mixins.sass
+++ b/src/css/mixins.sass
@@ -37,7 +37,7 @@ $navbar-top-logo-height: 48px
 $top-bar-height: 55px
 $left-sidebar-width: 110px
 $right-sidebar-width: 280px
-$center-pane-width: calc(100% - #{$right-sidebar-width})
+$center-pane-width: calc(100% - #{$left-sidebar-width} - #{$right-sidebar-width})
 $page-width: ($left-sidebar-width + $right-sidebar-width + $right-sidebar-width)
 
 // Media Query Sizes
