--- a/src/js/components/Analysis/Analysis.sass
+++ b/src/js/components/Analysis/Analysis.sass
@@ -69,6 +69,8 @@
   background-color: $center-grey
   +fillContainer
   overflow-y: auto
+  overflow-x: auto
+  max-width: 100%
 
 .summaryVariableContainer
   display: flex
